fixing height of empty display images on smaller displays

--- a/public/stylesheets/site.less
+++ b/public/stylesheets/site.less
@@ -241,7 +241,7 @@ ol.situations {
           width: 6em;
 
           &.empty {
-            padding-top: 64.44%;
+            height: ~"calc(0.6444 * 6em)";
           }
 
           & + .situation-section {
